# NeuroHelix

./: .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD_FIXED.md  MasterIdeaPlan.md  README.md  TAG_EXTRACTION_FIX.md  WARP.md  init_project.sh  install_automation.sh  prompts.md  uninstall_automation.sh
.github/: copilot-instructions.md
ai_dev_logs/: CONTEXT_AWARE_COMPLETE.md  IMPLEMENTATION_TESTING.md  SETUP_COMPLETE.md  STATIC_SITE_IMPLEMENTATION.md  STATUS.md  SYNTHESIS_COMPLETE.md
ai_docs/: 001_prompt_pipeline_improvement.md  002_Cleanup_and_reprocess.md  003_site_look_and_feel_improvment.md  004_static_site_publishing.md  (+5 more)
orchestrator/: .coverage  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
orchestrator/adapters/: filesystem.py  gemini_cli.py
orchestrator/config/: prompts.tsv  settings_schema.py  toml_config.py
orchestrator/nh_cli/: main.py
orchestrator/nh_cli/commands/: automation.py  cleanup.py  compare.py  config.py  diag.py  publish.py  registry.py  reprocess.py  run.py
orchestrator/nh_cli/utils/: default_command_group.py
orchestrator/services/: audit.py  cloudflare.py  git_safety.py  ledger.py  manifest.py  notifier.py  rate_limiter.py  registry.py  runner.py  sqlite_registry.py
orchestrator/tests/fixtures/: stub_gemini.py
orchestrator/tests/integration/: test_wave_execution.py
orchestrator/tests/unit/: test_audit.py  test_cloudflare.py  test_filesystem.py  test_gemini_cli.py  test_git_safety.py  test_ledger.py  test_manifest.py  test_notifier.py  test_registry.py  test_runner.py  test_sqlite_registry.py  test_toml_config.py
(+45 files in other folders)
